# messanger_api

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
app/: settings.py
app/api/: main.py  routers.py
app/api/authorization/: auto.py  func.py  settings.py
app/api/authorization/utils/: utils.py
app/api/endpoints/: chats.py  news.py  users.py
app/api/schemas/: chat.py  errors.py  news.py  sales_returns.py  token.py  user.py  user_chat.py
app/api/services/: chat.py  news.py  user.py  user_chat.py
app/api/utils/: async_connector.py  connection_manager.py  static.py
app/db/: base.py  db.py
app/db/migrations/: env.py
app/db/migrations/versions/: 63c719a7dba2_.py  7556c4635fbc_.py  b6c033ca2449_.py  bd1861dd462d_.py  feb8c12882ef_.py
app/db/models/: __init__.py  chat.py  chat_types.py  models.py  user.py  user_chat.py
app/db/repositories/: abstract_repo.py  chat.py  user_chat.py  user_repo.py
app/db/repositories/user_repository/: user_repo.py
app/redis/: redis.py
docker/: Dockerfile  docker-compose-dev.yml  docker-compose.yml
