[tool.poetry]
name = "messanger"
version = "0.1.0"
description = ""
authors = ["LonelyAvon <92423766+LonelyAvon@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.2"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.31"
yarl = "^1.9.4"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
asyncpg = "^0.29.0"
uvicorn = "^0.30.1"
sqlalchemy-utils = "^0.41.2"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
bcrypt = "^4.1.3"
datetime = "^5.5"
python-multipart = "^0.0.9"
aioredis = "^2.0.1"
redis = "^5.2.0"
typing-extensions = "^4.12.2"
requests = "^2.32.3"
aiohttp = "^3.10.10"
aiofiles = "^24.1.0"
aiosmtplib = "^3.0.2"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
